--- a/images/styles.css
+++ b/images/styles.css
@@ -94,14 +94,10 @@ background: rgba(11, 2, 35, 0.10);
     height: 1.5rem;
 }
 
-.banner-container{
+.banner{
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-image: url(../images/Group\ 14.png);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: left;
+    justify-content: space-between;
+    padding: 0 240px;
     
    
 }
@@ -112,7 +108,7 @@ background: rgba(11, 2, 35, 0.10);
     color: #0B0223;
 text-align: center;
 
-font-size: 3rem;
+font-size: 48px;
 
 font-weight: 600;
 
@@ -124,72 +120,10 @@ background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
 text-align: center;
-font-size: 6rem;
+font-size: 95px;
 font-weight: 800;
 text-transform: uppercase;
 }
-
-.btn-pink{
-    margin-top: 2.5rem;
-    color: #FFF;
-
-font-size: 1.25rem;
-border: none;
-margin-right: 1rem;
-
-font-weight: 600;
-padding: 1.2rem 2rem;
-
-text-transform: uppercase;
-border-radius: 3rem;
-background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
-}
-
-.btn-blue{
-
-    color: #FFF;
-
-
-  border: none;
-font-weight: 600;
-
-text-transform: uppercase;
-    font-size: 1.25rem;
-    
-padding: 20px 35px;
-align-items: flex-start;
-gap: 10px;
-border-radius: 48px;
-background: #4EC5F7;
-}
-.banner-img{
-   
-}
-
- .funny-description{
-    color: #0B0223;
-text-align: center;
-
-font-size: 48px;
-
-font-weight: 700;
-margin-top: 7.5rem;
-
-}
-
-.funny-video{
-    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
-background-clip: text;
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
-
-font-size: 48px;
-
-font-weight: 700;
-
-}
-
-
 
 
 
@@ -213,7 +147,7 @@ font-weight: 700;
  
 /*mobile version*/
 @media screen and (max-width:576px) {
-    nav,nav>ul, .banner-container{
+    nav,nav>ul{
         flex-direction: column;
     }
     nav li{
@@ -221,13 +155,6 @@ font-weight: 700;
     }
     .follow{
         margin: 0 auto;
-    }
-    /* .banner-img{
-        width: 500px;
-        
-    } */
-    .big-img{
-        width: 500px;
     }
     
 }
