--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,7 @@ nav{
 .nav-section{
     display: flex;
     align-items: center;
+    gap: 1.25rem;
 }
 nav img{
     width: 5rem;
@@ -61,6 +62,7 @@ nav>ul{
 nav li{
     list-style: none;
     margin-left: 2rem;
+    
     color: #3C354F;
 text-align: center;
 
@@ -72,9 +74,11 @@ font-weight: 500;
 nav li a{
     color: #3C354F;
     text-decoration: none;
+    
 }
 .follow{
     padding: 17px 24px;
+    
     border-radius: 8px;
 background: rgba(11, 2, 35, 0.10);
 
@@ -223,11 +227,28 @@ font-weight: 700;
     transform: translate(-50%, -50%);
     z-index: 1;
 }
+.watch-now{
+    display: none;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #F948B2;
+    padding: 5px 10px;
+    font-weight: 700;
+    
+}
+.feature-game-option:hover{
+    box-shadow: #0B0223;
+}
 
-.feature-game-option:hover .video-icon {
+.feature-game-option:hover .video-icon{
     display: block ;
     
 
+}
+.feature-game-option:hover .watch-now{
+    display: block;
 }
 
     
@@ -361,10 +382,96 @@ font-weight: 600;
     
 }
 
+/*footer*/
+
+footer{
+    width: 100%;
+    
+    background: #0B0223;
+    
+}
+
+.white{
+    color: #FFF;
+
+font-size: 2.5rem;
+
+font-weight: 700;
+
+}
+.footer-logo{
+    justify-content: center;
+    padding: 7.5rem;
+}
+.footer-name{
+    display: flex;
+    justify-content: center;
+    gap: 3.7rem;
+}
+
+.footer-ul ul{
+    list-style: none;
+}
+.footer-name a{
+    color: #ffff;
+    text-decoration: none;
+    
 
 
+font-size:1.2;
+
+font-weight: 600;
+
+    
+}
+
+.footer-icon{
+    margin-top: 3.5rem;
+}
+
+.footer-icon-logo{
+    display: flex;
+    justify-content: center;
+    gap: 3.5rem;
+    list-style: none;
+}
+.footer-icon-logo li{
+    color: #FFF;
+    text-decoration: none;
+    font-size: 2.5rem;
+}
+
+.footer-description{
+    margin-top: 4.4rem;
+}
+
+.footer-description ul{
+    display: flex;
+    justify-content: center;
+    gap: 3.7rem;
+}
+.footer-description p{
+    color: rgba(255, 255, 255, 0.60);
 
 
+font-size: 1rem;
+
+font-weight: 500;
+
+
+}
+.copy-right{
+    text-align: center;
+    color: rgba(255, 255, 255, 0.60);
+text-align: center;
+
+font-size: 1rem;
+
+font-weight: 500;
+margin-top: 1.8rem;
+
+
+}
 
 
 
@@ -411,5 +518,8 @@ font-weight: 600;
     .icon-container{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+    }
+    .feature-game-option{
+        gap: 0;
     }
 }
